Bug 357385 - Cannot edit existing collection
Summary: Cannot edit existing collection
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: editor (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-01 11:55 UTC by Dimitris Kardarakos
Modified: 2016-09-10 16:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
popup error (16.65 KB, image/png)
2016-01-01 15:42 UTC, Dimitris Kardarakos
Details
qurl to qstring patch (1.92 KB, patch)
2016-01-01 15:58 UTC, Dimitris Kardarakos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitris Kardarakos 2016-01-01 11:55:00 UTC
When trying to update an existing collection, upon saving, the following error popup is displayed:
"Writing file xxxxx resulted in an error:The lock file can't be created."

Reproducible: Always

Steps to Reproduce:
1. Open an existing collection
2. Edit an existing entry or add a new entry
3. Save

Actual Results:  
Error "Writing file xxxxx resulted in an error:The lock file can't be created."

Expected Results:  
File to be saved
Comment 1 Andreas Cord-Landwehr 2016-01-01 15:02:56 UTC
Git commit 1d14e946aacb395330e21c7b7696913fccaf2554 by Andreas Cord-Landwehr.
Committed on 01/01/2016 at 15:00.
Pushed by cordlandwehr into branch 'master'.

Make QString to QUrl conversions explicit.

This avoids silent conversions from file paths that are not provided in
url format and thus result in empty QUrl paths.

M  +3    -1    CMakeLists.txt
M  +4    -4    keduvocdocument/keduvocdocument.cpp
M  +2    -2    keduvocdocument/tests/converter.cpp

http://commits.kde.org/libkeduvocdocument/1d14e946aacb395330e21c7b7696913fccaf2554
Comment 2 Dimitris Kardarakos 2016-01-01 15:42:53 UTC
Created attachment 96397 [details]
popup error
Comment 3 Dimitris Kardarakos 2016-01-01 15:44:47 UTC
I can now update existing collections but this prevents me from creating new collections.

In console, I get the following:
QFile::copy: Empty or null file name

In application UI, I get the attached popup.
Comment 4 Dimitris Kardarakos 2016-01-01 15:57:29 UTC
I have managed to both create and update collections by reverting 1d14e946aacb395330e21c7b7696913fccaf2554 and following the primitive (?) approach of the attached patch, added just in case that helps.
Comment 5 Dimitris Kardarakos 2016-01-01 15:58:31 UTC
Created attachment 96399 [details]
qurl to qstring patch
Comment 6 Andreas Cord-Landwehr 2016-01-01 15:58:44 UTC
Git commit 322cb7e34e3b7ca7ebf4caf4ed75b22fb51fd68d by Andreas Cord-Landwehr.
Committed on 01/01/2016 at 15:53.
Pushed by cordlandwehr into branch 'master'.

Use more robust comparison.

Solves popup error when saving new file.

M  +1    -1    src/parleydocument.cpp

http://commits.kde.org/parley/322cb7e34e3b7ca7ebf4caf4ed75b22fb51fd68d
Comment 7 Juergen 2016-04-24 05:47:21 UTC
Ubuntu 16.04 64bit after upgrade from 14.04
Writing file "..." resulted in an error: The lock file can't be created.

The vocabulary collection is locked by another process.  You can open the file if you take over the lock, but you will lose any changes from the other process.

Version 2.1.0
Using:
KDE Frameworks 5.18.0
Qt 5.5.1 (built against 5.5.1)
The xcb windowing system

This bug has rendered my Parley unusable. Can somebody explain in English :) how to solve this problem.
Thanks for any help
Comment 8 Juergen 2016-04-24 06:34:31 UTC
using 4:15.12.3-0ubuntu1
Comment 9 Juergen 2016-09-10 16:59:06 UTC
The status of this bug is not resolved. I have no idea how to implement the above changes. The vocabulary file still can not be saved excepts by manually overwriting it. I consider this a bug that needs attention. If it is already fixed like mentioned above why can't one get a deb package to fix this bug.
Any suggestion what to do?