Make QString to QUrl conversions explicit.

This avoids silent conversions from file paths that are not provided in
url format and thus result in empty QUrl paths.

BUG: 357385